# opengl-web

./: .gitignore  .gitmodules  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: page.yml
src/: App.css  App.tsx
src-cpp/: CMakeLists.txt
src-cpp/include/: Core.h  Renderer.h  Shader.h  Utils.h
src-cpp/programs/noise/: main.cpp
src-cpp/programs/noise/rsc/: frag.txt  vert.txt
src-cpp/src/: Debug.cpp  Renderer.cpp  Shader.cpp  Utils.cpp
